<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hospital" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="#fff"
            app:cardCornerRadius="5dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_centerHorizontal="true">

                                        <!--    HOSPITAL NAME   -->

                <TextView
                    android:id="@+id/hospital_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="Hind Siliguri"
                    android:text="@string/hospital"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="normal" />

                            <!--                    Specialized Hospital      -->

                    <TextView
                    android:id="@+id/specialized"
                        android:layout_below="@id/hospital_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="Hind Siliguri"
                    android:text="@string/specialized_Hospital"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="normal" />

                            <!--                    RATING BAR              -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/reting"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/specialized"

                        >

                        <TextView
                            android:id="@+id/rat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Profile_ImageViewId"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="Roboto"
                            android:text="৪.৪"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <RatingBar
                            android:id="@+id/simpleRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginLeft="10dp"
                            android:background="#00000000"
                            android:numStars="5"
                            android:progressBackgroundTint="#140D00"
                            android:progressTint="#FFC34C"
                            android:rating="1" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/reting"
                        android:layout_marginTop="30dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="25dp"

                                android:text="@string/offday"
                                android:textColor="@color/redi"
                                android:textSize="15sp"
                                android:fontFamily="Roboto"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time"
                                android:textColor="#000000"
                                android:textSize="15sp"
                                android:fontFamily="Roboto"/>


                        </LinearLayout>
                        <view
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                        />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/everytime"
                            android:textColor="@color/bluei"
                            android:textSize="15sp"
                            android:fontFamily="Roboto"/>

                        <view
                            android:id="@+id/hr"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_below="@id/time"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginTop="40dp"
                            >

                            <TextView
                                android:id="@+id/llocation_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/location_text"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:fontFamily="Roboto"/>


                            <ImageView
                                android:id="@+id/mapId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/map"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:scaleType="fitXY"
                                android:layout_marginTop="30dp"/>

                            <TextView
                                android:id="@+id/near_by_hospital"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginTop="20dp"
                                android:textColor="#730E65"
                                android:textStyle="bold"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/near_by_hospital"
                                android:textSize="15sp"
                                android:fontFamily="Roboto"
                                android:layout_below="@+id/mapId"/>
                            <!--Cardview-->

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">



                                <androidx.cardview.widget.CardView
                                    app:cardCornerRadius="5dp"
                                    android:layout_margin="10dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    >

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <com.mikhaellopez.circularimageview.CircularImageView
                                            android:id="@+id/recy_ImageViewId"
                                            android:layout_width="60dp"
                                            android:layout_height="60dp"
                                            android:layout_centerHorizontal="true"
                                            android:layout_margin="5dp"
                                            android:src="@drawable/picq" />

                                        <RelativeLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center">

                                            <TextView
                                                android:id="@+id/foodLis_Tv_id"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center"
                                                android:layout_marginLeft="4dp"
                                                android:text="@string/hospital_name"
                                                android:textColor="@android:color/black"
                                                android:textSize="14sp" />
                                            <TextView
                                                android:id="@+id/foodLis_Tv_id3"
                                                android:layout_below="@+id/foodLis_Tv_id"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center"
                                                android:layout_marginLeft="4dp"
                                                android:text="@string/hospital_location"
                                                android:textColor="@android:color/black"
                                                android:textSize="8sp" />

                                            <ImageView
                                                android:id="@+id/food_imge_i"
                                                android:layout_width="20dp"
                                                android:layout_height="20dp"
                                                android:layout_margin="10dp"
                                                android:layout_alignParentRight="true"
                                                android:layout_centerInParent="true"
                                                android:layout_gravity="center"
                                                android:src="@drawable/call" />

                                        </RelativeLayout>



                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>


                            </LinearLayout>
                            <!--end cardview-->

                        </LinearLayout>



                    </RelativeLayout>




                </RelativeLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>



</RelativeLayout>